# T-800

./: .gitignore  LICENSE  README.md
SLAM/: package.xml
SLAM/launch/: SLAM_launch.yaml
SLAM/scripts/: test1
grp-pibot21-ch1/: CMakeLists.txt  README.md  package.xml
grp-pibot21-ch1/config/: config.rviz
grp-pibot21-ch1/launch/: basic_launch.yaml  irl_launch.yaml  simulation_launch.yaml
grp-pibot21-ch1/scripts/: camera  emergencystop  mover  navigation  navigation2  navigation3  scanner
grp-pibot21-ch2/: CMakeLists.txt  README.md  package.xml  requirements.txt
grp-pibot21-ch2/config/: config.rviz  config_cam.rviz
grp-pibot21-ch2/launch/: basic_launch.yaml  irl_auto_launch.yaml  irl_launch.yaml  rviz_launch.yaml  simulation_launch.yaml  simulation_rviz_launch.yaml
grp-pibot21-ch2/scripts/: camera  map  mover  navigation  place  requirements.txt  rscamtools.py  scanner  visiontools.py
move-the-robot/: CMakeLists.txt  package.xml
move-the-robot/scripts/: talker  test_bump  test_move  test_range  test_reactive
my_amasing_pkg/: CMakeLists.txt  package.xml
slam/: CMakeLists.txt  package.xml
slam/launch/: SLAM_launch.yaml  config.yaml  nav2.yaml
slam/screen-maps/: test.pgm  test.yaml
slam/scripts/: SLAM.py  data_map.py  navigation  navigation2  save_map.py  test1  test1.py
tuto_vision/: CMakeLists.txt  package.xml
tuto_vision/scripts/: camera_bouteille.py  sensor.py  sensor_bis.py
tuto_vision/scripts/vision/: distance.py  hsvmask.py  hsvmean.py  realsensetools.py  region.py
