<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grp-pibot21-ch1</name>
  <version>0.0.0</version>
  <description>Package that respond to the first challenge for the group 21 (UV LARM 2025)</description>
  <maintainer email="t-800-a3-m1@proton.me">a3m1</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>rviz2</depend>
  <depend>tbot_sim</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
