<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuto_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="t-800-a3-m1@proton.me">a3m1</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>pyrealsense2</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
